--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider: ^5.0.0
   http: ^1.3.0
   audioplayers: ^6.4.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
