--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   audioplayers: ^6.4.0
   provider: ^6.1.2
   intl: ^0.20.2
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
