--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
   assets:
     - assets/images/
     - assets/files/
+    - assets/files/azkar/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
